{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 446,
  "lineage": "f867373f-3ef3-30d7-8e67-d7747a68c05d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:security-group/sg-0e3a65feedc9f4219",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e3a65feedc9f4219",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2021082416145233410000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "263423382682",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:security-group/sg-0196444338823015e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0196444338823015e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210824161452325000000008",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "263423382682",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:security-group/sg-08c948375c4aee9f8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08c948375c4aee9f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20210824161452325700000009",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "263423382682",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:security-group/sg-0a232086032a9903a",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a232086032a9903a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6a2365d243d8f80"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "k8s2-k8s2-eks-tYTYuDlU2021082416145467020000000b",
            "name_prefix": "k8s2-k8s2-eks-tYTYuDlU",
            "owner_id": "263423382682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "k8s2-testing",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "k8s2-k8s2-eks-tYTYuDlU-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "k8s2-testing",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "k8s2-k8s2-eks-tYTYuDlU-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:security-group/sg-0d6a2365d243d8f80",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6a2365d243d8f80",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a232086032a9903a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a232086032a9903a"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s2-k8s2-eks-tYTYuDlU20210824161452324000000007",
            "name_prefix": "k8s2-k8s2-eks-tYTYuDlU",
            "owner_id": "263423382682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "k8s2-testing",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "k8s2-k8s2-eks-tYTYuDlU-eks_worker_sg",
              "kubernetes.io/cluster/k8s2-k8s2-eks-tYTYuDlU": "owned"
            },
            "tags_all": {
              "Environment": "k8s2-testing",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "k8s2-k8s2-eks-tYTYuDlU-eks_worker_sg",
              "kubernetes.io/cluster/k8s2-k8s2-eks-tYTYuDlU": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-637593603",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a232086032a9903a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1956289480",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a232086032a9903a",
            "self": false,
            "source_security_group_id": "sg-0d6a2365d243d8f80",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2609288744",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d6a2365d243d8f80",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3422684532",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d6a2365d243d8f80",
            "self": false,
            "source_security_group_id": "sg-0a232086032a9903a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-516855444",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d6a2365d243d8f80",
            "self": false,
            "source_security_group_id": "sg-0a232086032a9903a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2782889711",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d6a2365d243d8f80",
            "self": false,
            "source_security_group_id": "sg-0d6a2365d243d8f80",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06d80ed73b81b6213",
            "domain": "vpc",
            "id": "eipalloc-099c055d7d9015e35",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09e8daa618fd00f20",
            "private_dns": "ip-10-0-4-180.ec2.internal",
            "private_ip": "10.0.4.180",
            "public_dns": "ec2-52-70-224-123.compute-1.amazonaws.com",
            "public_ip": "52.70.224.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s2-vpc-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "tags_all": {
              "Name": "k8s2-vpc-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:internet-gateway/igw-0f136148beff5d266",
            "id": "igw-0f136148beff5d266",
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "tags_all": {
              "Name": "k8s2-vpc",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099c055d7d9015e35",
            "connectivity_type": "public",
            "id": "nat-0d7206c0bf48a62f3",
            "network_interface_id": "eni-09e8daa618fd00f20",
            "private_ip": "10.0.4.180",
            "public_ip": "52.70.224.123",
            "subnet_id": "subnet-0faa29e8868b14086",
            "tags": {
              "Name": "k8s2-vpc-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "tags_all": {
              "Name": "k8s2-vpc-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08f61e509c1bfd4d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d7206c0bf48a62f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f61e509c1bfd4d4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f136148beff5d266",
            "id": "r-rtb-0578d55ed6eb9cf0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0578d55ed6eb9cf0e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:route-table/rtb-08f61e509c1bfd4d4",
            "id": "rtb-08f61e509c1bfd4d4",
            "owner_id": "263423382682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7206c0bf48a62f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s2-vpc-private",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "tags_all": {
              "Name": "k8s2-vpc-private",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:route-table/rtb-0578d55ed6eb9cf0e",
            "id": "rtb-0578d55ed6eb9cf0e",
            "owner_id": "263423382682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f136148beff5d266",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s2-vpc-public",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "tags_all": {
              "Name": "k8s2-vpc-public",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124ebef266673fb8",
            "route_table_id": "rtb-08f61e509c1bfd4d4",
            "subnet_id": "subnet-019d0dcd9b563e7b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ab18193b96a1c73",
            "route_table_id": "rtb-08f61e509c1bfd4d4",
            "subnet_id": "subnet-07fa92d1258f65f60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080436bee1a0fe729",
            "route_table_id": "rtb-08f61e509c1bfd4d4",
            "subnet_id": "subnet-070cf83ae3804118f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a61b078ba34aa5b",
            "route_table_id": "rtb-0578d55ed6eb9cf0e",
            "subnet_id": "subnet-0faa29e8868b14086"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0700c1c17343ee4fe",
            "route_table_id": "rtb-0578d55ed6eb9cf0e",
            "subnet_id": "subnet-0a84ee28cb81f570b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0350fad35648bc014",
            "route_table_id": "rtb-0578d55ed6eb9cf0e",
            "subnet_id": "subnet-0373fc8b3835954f8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:subnet/subnet-019d0dcd9b563e7b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-019d0dcd9b563e7b6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc-private-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/internal-elb-k8s2-eks-tYTYuDlU": "1"
            },
            "tags_all": {
              "Name": "k8s2-vpc-private-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/internal-elb-k8s2-eks-tYTYuDlU": "1"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:subnet/subnet-07fa92d1258f65f60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07fa92d1258f65f60",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc-private-us-east-1b",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/internal-elb-k8s2-eks-tYTYuDlU": "1"
            },
            "tags_all": {
              "Name": "k8s2-vpc-private-us-east-1b",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/internal-elb-k8s2-eks-tYTYuDlU": "1"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:subnet/subnet-070cf83ae3804118f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-070cf83ae3804118f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc-private-us-east-1c",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/internal-elb-k8s2-eks-tYTYuDlU": "1"
            },
            "tags_all": {
              "Name": "k8s2-vpc-private-us-east-1c",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/internal-elb-k8s2-eks-tYTYuDlU": "1"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:subnet/subnet-0faa29e8868b14086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0faa29e8868b14086",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc-public-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/elb-k8s2-eks-tYTYuDlU": "1"
            },
            "tags_all": {
              "Name": "k8s2-vpc-public-us-east-1a",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/elb-k8s2-eks-tYTYuDlU": "1"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:subnet/subnet-0a84ee28cb81f570b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a84ee28cb81f570b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc-public-us-east-1b",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/elb-k8s2-eks-tYTYuDlU": "1"
            },
            "tags_all": {
              "Name": "k8s2-vpc-public-us-east-1b",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/elb-k8s2-eks-tYTYuDlU": "1"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:subnet/subnet-0373fc8b3835954f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0373fc8b3835954f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc-public-us-east-1c",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/elb-k8s2-eks-tYTYuDlU": "1"
            },
            "tags_all": {
              "Name": "k8s2-vpc-public-us-east-1c",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared",
              "kubernetes.io/role/elb-k8s2-eks-tYTYuDlU": "1"
            },
            "vpc_id": "vpc-03d937ddbda16e281"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263423382682:vpc/vpc-03d937ddbda16e281",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0683a10aab21c42d6",
            "default_route_table_id": "rtb-09bbb4260f0066a39",
            "default_security_group_id": "sg-08ecb2f6af689f6c3",
            "dhcp_options_id": "dopt-06a918d7abec74e77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d937ddbda16e281",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bbb4260f0066a39",
            "owner_id": "263423382682",
            "tags": {
              "Name": "k8s2-vpc",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            },
            "tags_all": {
              "Name": "k8s2-vpc",
              "kubernetes.io/cluster/k8s2-eks-tYTYuDlU": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}